fix dark mode issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ $light-theme: mat.define-theme((
 
 $dark-theme: mat.define-theme((
     color: (
+        theme-type: dark,
         primary: mat.$green-palette,
         tertiary: mat.$orange-palette,
     ),
